--- a/index.html
+++ b/index.html
@@ -1,19 +1,112 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>Rolls-Roys Motor Cars: Inspiring greatness</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="images/RR.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	<header>
+		<nav>menu</nav>
+		<a href="index.html"><img src="/images/RR.svg" alt=""></a>
+		<button>find a dealer</button>
+	</header>
+	<main>
+		<section>
+			<h2>spectre</h2>
+			<p>in motion</p>
+			<a href="">discover now</a>
+		</section>
+		<section>
+			<h2>spectre charging</h2>
+			<a href="">discover now</a>
+		</section>
+		<section>
+			<h2>phantom</h2>
+			<p>scintilla</p>
+			<a href="">discover now</a>			
+		</section>
+		<section>
+			<h3>explore further</h3>
+			<p>continue your journey</p>
+			<ul>
+				<li>
+					<a href="">
+						<img src="" alt="">
+						<h4>Inspiring Greatness Series</h4>
+						<p>In this exploratory series from Rolls-Royce lies a collection of aspirational stories from those who rewrite the boundaries of greatness.</p>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="" alt="">
+						<h4>Ghost</h4>
+						<p>Purity is possibility. Extend the limits of your imagination with the perfect blank canvas.</p>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="" alt="">
+						<h4>Discover Bespoke</h4>
+						<p>Choose from our exclusive collections or collaborate with our craftspeople and designers to create a Rolls-Royce wholly unique to you. This is Rolls-Royce Bespoke.</p>
+					</a>
+				</li>
+			</ul>
+		</section>
+	</main>
+	<footer>
+		<ul>
+			<li>
+				<a href="">Pre-owned</a>
+			</li>
+			<li>
+				<a href="">Pressclub</a>
+			</li>
+			<li>
+				<a href="">complaints</a>
+			</li>
+			<li>
+				<a href="">eu tyre labels</a>
+			</li>
+			<li>
+				<a href="">contact</a>
+			</li>
+			<li>
+				<a href="">careers</a>
+			</li>
+			<li>
+				<a href="">whispers</a>
+			</li>
+			<li>
+				<a href="">cookies</a>
+			</li>
+			<li>
+				<a href="">legal</a>
+			</li>
+			<li>
+				<a href="">find a dealer</a>
+			</li>
+			<li>
+				<a href="">battery regulation</a>
+			</li>
+			<li>
+				<a href="">privacy</a>
+			</li>
+			<li>
+				<a href="">site map</a>
+			</li>
+			<li>
+				<a href="">language <img src="" alt=""></a>
+			</li>
+		</ul>
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
