gfuhdissihbdqwdiwdvfihobuhvwdqi0jpibhkewu9pdqipuhib

--- a/index.html
+++ b/index.html
@@ -15,45 +15,47 @@
 <body>
 	<header>
 		<nav>menu</nav>
-		<a href="index.html"><img src="/images/RR.svg" alt=""></a>
-		<button>find a dealer</button>
+		<a href="index.html"><img src="/images/RR.svg" alt="" id="logo"></a>
+		<button>dealers</button>
 	</header>
 	<main>
-		<section>
-			<h2>spectre</h2>
-			<p>in motion</p>
-			<a href="">discover now</a>
-		</section>
-		<section>
-			<h2>spectre charging</h2>
-			<a href="">discover now</a>
-		</section>
-		<section>
-			<h2>phantom</h2>
-			<p>scintilla</p>
-			<a href="">discover now</a>			
+		<section id="snap"> <!-- scroll snap type -->
+			<article class="snap_article">
+				<h2>spectre</h2>
+				<p>in motion</p>
+				<a href="#">discover now</a>
+			</article>
+			<article class="snap_article">
+				<h2>spectre charging</h2>
+				<a href="#">discover now</a>
+			</article>
+			<article class="snap_article">
+				<h2>phantom</h2>
+				<p>scintilla</p>
+				<a href="#">discover now</a>
+			</article>
 		</section>
 		<section>
 			<h3>explore further</h3>
 			<p>continue your journey</p>
 			<ul>
 				<li>
-					<a href="">
-						<img src="" alt="">
+					<a href="#">
+						<img src="/images/vleugel_ding.webp" alt="">
 						<h4>Inspiring Greatness Series</h4>
 						<p>In this exploratory series from Rolls-Royce lies a collection of aspirational stories from those who rewrite the boundaries of greatness.</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="" alt="">
+					<a href="#">
+						<img src="/images/auto_voorkant.webp" alt="">
 						<h4>Ghost</h4>
 						<p>Purity is possibility. Extend the limits of your imagination with the perfect blank canvas.</p>
 					</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="" alt="">
+					<a href="#">
+						<img src="/images/roze_auto.webp" alt="">
 						<h4>Discover Bespoke</h4>
 						<p>Choose from our exclusive collections or collaborate with our craftspeople and designers to create a Rolls-Royce wholly unique to you. This is Rolls-Royce Bespoke.</p>
 					</a>
@@ -62,48 +64,49 @@
 		</section>
 	</main>
 	<footer>
+
 		<ul>
 			<li>
-				<a href="">Pre-owned</a>
+				<a href="#">Pre-owned</a>
 			</li>
 			<li>
-				<a href="">Pressclub</a>
+				<a href="#">Pressclub</a>
 			</li>
 			<li>
-				<a href="">complaints</a>
+				<a href="#">complaints</a>
 			</li>
 			<li>
-				<a href="">eu tyre labels</a>
+				<a href="#">eu tyre labels</a>
 			</li>
 			<li>
-				<a href="">contact</a>
+				<a href="#">contact</a>
 			</li>
 			<li>
-				<a href="">careers</a>
+				<a href="#">careers</a>
 			</li>
 			<li>
-				<a href="">whispers</a>
+				<a href="#">whispers</a>
 			</li>
 			<li>
-				<a href="">cookies</a>
+				<a href="#">cookies</a>
 			</li>
 			<li>
-				<a href="">legal</a>
+				<a href="#">legal</a>
 			</li>
 			<li>
-				<a href="">find a dealer</a>
+				<a href="#">find a dealer</a>
 			</li>
 			<li>
-				<a href="">battery regulation</a>
+				<a href="#">battery regulation</a>
 			</li>
 			<li>
-				<a href="">privacy</a>
+				<a href="#">privacy</a>
 			</li>
 			<li>
-				<a href="">site map</a>
+				<a href="#">site map</a>
 			</li>
 			<li>
-				<a href="">language <img src="" alt=""></a>
+				<a href="#">language <img src="" alt=""></a>
 			</li>
 		</ul>
 	</footer>
