--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Rolls-Roys Motor Cars: Inspiring greatness</title>
@@ -14,7 +13,18 @@
 
 <body>
 	<header>
-		<nav>menu</nav>
+		<nav>
+			<button id="burger">menu</button>
+			<ul id="menu_list">
+				<li><a href="#">inspiring greatness</a></li>
+				<li><button>models</button></li>
+				<li><a href="#">bespoke</a></li>
+				<li><a href="#">ownership</a></li>
+				<li><a href="#">provance</a></li>
+				<li><a href="#">boutique</a></li>
+				<li><a href="#">muse arts programme</a></li>
+			</ul>
+		</nav>
 		<a href="index.html"><img src="/images/RR.svg" alt="" id="logo"></a>
 		<button>dealers</button>
 	</header>
