--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 	<header>
 		<nav>
 			<button id="burger">menu</button>
+			<button id="models">models</button>
 			<ul id="menu_list">
 				<li><a href="#">inspiring greatness</a></li>
-				<li><button>models</button></li>
 				<li><a href="#">bespoke</a></li>
 				<li><a href="#">ownership</a></li>
 				<li><a href="#">provance</a></li>
 				<li><a href="#">boutique</a></li>
 				<li><a href="#">muse arts programme</a></li>
+			</ul>
+			<ul id="models_small">
+				<li><a href="#">phantom</a></li>
+				<li><a href="#">phantom extended</a></li>
+				<li><a href="#">spectre</a></li>
+				<li><a href="#">ghost</a></li>
+				<li><a href="#">ghost extended</a></li>
+				<li><a href="#">cullinan series ii</a></li>
+				<li><a href="#">black badge</a></li>
+				<li><a href="#">configure</a></li>
 			</ul>
 		</nav>
 		<a href="index.html"><img src="/images/RR.svg" alt="" id="logo"></a>
@@ -116,7 +126,7 @@
 				<a href="#">site map</a>
 			</li>
 			<li>
-				<a href="#">language <img src="" alt=""></a>
+				<a href="#">language <img src=".//images/flag.png" alt=""></a>
 			</li>
 		</ul>
 	</footer>
