--- a/index.html
+++ b/index.html
@@ -34,16 +34,33 @@
 				<li><a href="#">black badge</a></li>
 				<li><a href="#">configure</a></li>
 			</ul>
+			<ul id="models_big">
+				<li><button class="model_knop">phantom</button></li>
+				<li><button class="model_knop">phantom extended</button></li>
+				<li><button class="model_knop">spectre</button></li>
+				<li><button class="model_knop">ghost</button></li>
+				<li><button class="model_knop">ghost extended</button></li>
+				<li><button class="model_knop">cullinan series ii</button></li>
+				<li><button class="model_knop">black badges</button></li>
+				<li><a href="#">configure</a></li>
+			</ul>
+			<div id="right_pictures">
+				<a href="#">discover</a>
+			</div>
 		</nav>
 		<a href="index.html"><img src="/images/RR.svg" alt="" id="logo"></a>
 		<button>dealers</button>
 	</header>
-	<main>
-		<section id="snap"> <!-- scroll snap type -->
+	<main class="home">
+		<h1 class="hidden">Rolls-Royce motorcars</h1>
+		<section id="snap">
 			<article class="snap_article">
 				<h2>spectre</h2>
 				<p>in motion</p>
 				<a href="#">discover now</a>
+				<video autoplay muted loop>
+					<source src="/images/Rolls_Royce.mp4" type="video/mp4">
+				</video>
 			</article>
 			<article class="snap_article">
 				<h2>spectre charging</h2>
@@ -130,7 +147,7 @@
 			</li>
 		</ul>
 	</footer>
-	<div></div>
+	<div id="cursor"></div>
 	<script defer src="scripts/script.js"></script>
 </body>
 	
