--- a/complaints.html
+++ b/complaints.html
@@ -73,10 +73,10 @@
 				</h2>
 				<p>
 					If you have a concern with either your vehicle or the service you have received from your Rolls-Royce Motor Cars Dealership, please contact us by your preferred method from the list below.
-					<br>Write to us at:
-					<br>Client Relations Department
-					<br>Rolls-Royce Motor Cars Limited
-					<br>The Drive, Westhampnett, Chichester, West Sussex, PO18 0SH
+					<br><br>Write to us at:
+					<br><br>Client Relations Department
+					<br><br>Rolls-Royce Motor Cars Limited
+					<br><br>The Drive, Westhampnett, Chichester, West Sussex, PO18 0SH
 				</p>
 				<ul>
 					<li>international</li>
@@ -111,20 +111,20 @@
 				<h2>Our commitment to you</h2>
 				<p>
 					We will thoroughly investigate your complaint and offer a fair response that will take into account all the information available to us.
-					<br>We aim to close 50% of our customer complaints within 7 business days.
-					<br>More complex cases may take longer and the team will keep you updated on an agreed timely basis.
-					<br>We will explain our decision and agree a course of action with you, in a way that is fair, clear and not misleading and offer remedial action or redress if required.
+					<br><br>We aim to close 50% of our customer complaints within 7 business days.
+					<br><br>More complex cases may take longer and the team will keep you updated on an agreed timely basis.
+					<br><br>We will explain our decision and agree a course of action with you, in a way that is fair, clear and not misleading and offer remedial action or redress if required.
 				</p>
 			</article>
 			<article>
 				<h2>What you will need to provide</h2>
 				<p>
 					Your name and address
-					<br>Your vehicles VIN/Chasiss number (if an owner)
-					<br>Details of how we can contact you and how you would like to be contacted
-					<br>A clear description of your complaint
-					<br>Copies of any supporting documentation
-					<br>What you would like us to do to rectify the situation
+					<br><br>Your vehicles VIN/Chasiss number (if an owner)
+					<br><br>Details of how we can contact you and how you would like to be contacted
+					<br><br>A clear description of your complaint
+					<br><br>Copies of any supporting documentation
+					<br><br>What you would like us to do to rectify the situation
 				</p>
 			</article>
 		</section>
