--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
 			<ul>
 				<li>
 					<a href="#">
-						<img src="/images/vleugel_ding.webp" alt="">
+						<img src="../images/vleugel_ding.webp" alt="">
 						<h4>Inspiring Greatness Series</h4>
 						<p>In this exploratory series from Rolls-Royce lies a collection of aspirational stories from those who rewrite the boundaries of greatness.</p>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="/images/auto_voorkant.webp" alt="">
+						<img src="../images/auto_voorkant.webp" alt="">
 						<h4>Ghost</h4>
 						<p>Purity is possibility. Extend the limits of your imagination with the perfect blank canvas.</p>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="/images/roze_auto.webp" alt="">
+						<img src="../images/roze_auto.webp" alt="">
 						<h4>Discover Bespoke</h4>
 						<p>Choose from our exclusive collections or collaborate with our craftspeople and designers to create a Rolls-Royce wholly unique to you. This is Rolls-Royce Bespoke.</p>
 					</a>
@@ -110,7 +110,7 @@
 				<a href="#">Pressclub</a>
 			</li>
 			<li>
-				<a href="#">complaints</a>
+				<a href="complaints.html">complaints</a>
 			</li>
 			<li>
 				<a href="#">eu tyre labels</a>
