--- a/complaints.html
+++ b/complaints.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/svg+xml" href="images/RR.svg">
 </head>
 
-<body>
+<body id="complaint_page">
 	<header>
 		<nav>
 			<button id="burger">menu</button>
@@ -178,7 +178,7 @@
 		</ul>
 	</footer>
 	<div id="cursor"></div>
-	<script defer src="scripts/script.js"></script>
+	<script defer src="scripts/complaints_script.js"></script>
 </body>
 	
 </html>
