--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		</ul>
 	</footer>
 	<div id="cursor"></div>
-	<script defer src="scripts/script.js"></script>
+	<script defer src="scripts/index_script.js"></script>
 </body>
 	
 </html>
