readme + js files organizeren

--- a/complaints.html
+++ b/complaints.html
@@ -54,7 +54,9 @@
 	<main class="complaints">
 		<section>
 			<div>
-				<h1>client complaints procedure</h1>
+				<div id="blur_img">
+					<h1>client complaints procedure</h1>
+				</div>
 			</div>
 			<article>
 				<h2>
@@ -178,7 +180,9 @@
 		</ul>
 	</footer>
 	<div id="cursor"></div>
+	<script defer src="scripts/general_script.js"></script>
 	<script defer src="scripts/complaints_script.js"></script>
+	
 </body>
 	
 </html>
