--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 	</footer>
 	<div id="cursor"></div>
 	<script defer src="scripts/index_script.js"></script>
+	<script defer src="scripts/general_script.js"></script>
 </body>
 	
 </html>
