links fixen zodat t op git ook werkt

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<a href="#">discover</a>
 			</div>
 		</nav>
-		<a href="index.html"><img src="/images/RR.svg" alt="" id="logo"></a>
+		<a href="index.html"><img src="images/RR.svg" alt="" id="logo"></a>
 		<button>dealers</button>
 	</header>
 	<main class="home">
