--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<p>in motion</p>
 				<a href="#">discover now</a>
 				<video autoplay muted loop>
-					<source src="/images/Rolls_Royce.mp4" type="video/mp4">
+					<source src="images/Rolls_Royce.mp4" type="video/mp4">
 				</video>
 			</article>
 			<article class="snap_article">
